<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    >

    <ImageView
        android:id="@+id/iv_BeerImage"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image_beer"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_beerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/beer_name"
        android:textSize="25sp"
        android:layout_marginStart="8dp"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@+id/tv_beerType"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/iv_BeerImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_beerType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/beer_type"
        android:layout_marginStart="8dp"
        android:textColor="#9C27B0"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_beerCountry"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/iv_BeerImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_beerName" />

    <TextView
        android:id="@+id/tv_beerCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/beer_country"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/iv_BeerImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_beerType" />

</androidx.constraintlayout.widget.ConstraintLayout>